--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/estilo-principal.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     
-</head>
+</head> 
 
 <body>
     <header>
@@ -16,7 +16,7 @@
 
             <img src="./img/Logo.png" alt="Logo Librería UTN">
         </a>
-        <h1>Investigaciones Programación Web UTN</h1>
+        <h1>Investigaciones Programación Web UTN -1</h1>
     </header>
     <p>
         Este sitio web se creó con la intención de usarse 
