--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             
         </ul>
     </nav>
-    <a href=""><h2>2. Accesibilidad Web</h2></a>
+    <a href="./accesibilidad-web.html"><h2>2. Accesibilidad Web</h2></a>
     <h3>Temas a tratar:</h3>
     <nav>
         <!-- Lista no ordenada -->
