--- a/accesibilidad-web.html
+++ b/accesibilidad-web.html
@@ -4,11 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/estilo-inv2.css">
 </head>
 <header>
-    HOLA
+    <h1>Accesibilidad Web</h1>
 </header>
+<nav>
+    <div class="nav-button"><a href="#modal">¿Qué es?</a></div>
+    <div class="nav-button"><a href="#pagination">Importancia</a></div>
+    <div class="nav-button"><a href="#nav-tab">Principios</a></div>
+</nav>
 <body>
-    
+    <main>
+        <section>
+            <h1>¿Qué es?</h1>
+            <div class="noticia-container">
+                <div>
+                    <img src="img/inv2c1.png" class="imagen-relleno">
+                </div>
+                <div class="noticia-content">
+                    <p>Es un hecho que el mundo actualmente tiene una relación muy estrecha con la tecnología, y es inevitable verla en todas
+                        las acciones que se realizan día con día. Es una herramienta que a pesar de las críticas, ha llegado para hacer nuestra vida 
+                        más sencilla y nos ha abierto puertas a nuevas posibilidades. Debido a esta creciente dependencia, es esencial que el 
+                        acceso a las utilidades que nos ofrece, sea accesible para todo el mundo. 
+                    </p>
+                    <p>Esto último es en lo que se basa la accesibilidad web, garantizar el acceso al contenido para todas las personas, incluidas 
+                        aquellas con capacidades diferentes. Esta trata de brindar una mejor experiencia para los usuarios, al garantizar que el 
+                        contenido digital sea más usable y comprensible.
+                    </p>
+                </div>
+            </div>
+        </section>
+    </main> 
 </body>
 </html>
