--- a/accesibilidad-web.html
+++ b/accesibilidad-web.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Accesibilidad web</title>
     <link rel="stylesheet" href="./css/estilo-inv2.css">
 </head>
 <header>
@@ -120,6 +120,12 @@
                 text=La%20accesibilidad%20web%20es%20la%20caracter%C3%ADstica%20de%20los,
                 o%20sociales%2C%20como%20es%20el%20caso%20del%20analfabetismo." target="_blank">
                 Accesibilidad web, qué es y cómo se logra (con ejemplos) (hubspot.es)
+                </a>
+            </footer>
+            <footer>
+                Fuente:
+                <a href="https://www.byronvargas.com/web/por-que-necesitamos-accesibilidad-web/" target="_blank">
+                La importancia de la accesibilidad web: ¿Por qué necesitamos garantizarla?
                 </a>
             </footer>
         </section>
