--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             
         </ul>
     </nav>
-    <a href=""><h2>3. Diseño web centrado en el usuario(DCU)</h2></a>
+    <a href="./dcu.html"><h2>3. Diseño web centrado en el usuario(DCU)</h2></a>
     <h3>Temas a tratar:</h3>
     <nav>
         <!-- Lista no ordenada -->
