--- a/usabilidad-web.html
+++ b/usabilidad-web.html
@@ -375,8 +375,13 @@
                 
             </footer>
             <footer>
-                <a href="https://www.nngroup.com/articles/ten-usability-heuristics/" target="_blank">
+                <a href="https://www.nngroup.com/articles/ten-usability-heuristics/" target="_blank"> 
                     10 Heurísticas de usabilidad para el diseño de interfaces de usuario
+                </a>
+            </footer>
+            <footer>
+                <a href="https://www.unir.net/marketing-comunicacion/revista/que-es-usabilidad-web/" target="_blank"> 
+                    ¿Qué es la usabilidad web? Principios básicos de usabilidad?
                 </a>
             </footer>
         </section>
